public/apps/configuration-react/less/main.less
#searchGuardKibanaPlugin {
  .sgHomeMenu__card {
    width: 200px;
  }

  .sgContentPanel {
    padding: 0px 0px;
  }

  .sgContentPanel .sgContentPanel__header {
    padding: 0px 10px;
  }

  .sgContentPanel .sgContentPanel__body {
    padding: 0px 10px;
  }

  .sgBreadcrumbs {
    padding: 0px 0px;
  }

  .sgDynamicValuesForm {
    margin-top: 5px;
  }

  .sgDynamicValuesForm__title, .sgDynamicValuesForm__item, .sgDynamicValuesForm__empty {
    margin-bottom: 0px;
  }

  .sgSideNav {
    width: 220px;
  }

  .sgFixedFormItem {
    max-width: 400px;
  }
}

